Add some graphics, fix UI up a bit

--- a/app/src/main/res/layout/view_dashboard.xml
+++ b/app/src/main/res/layout/view_dashboard.xml
@@ -6,82 +6,91 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+
         android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/city_seal"/>
 
         <TextView
             android:id="@+id/district_tv"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
             android:gravity="center_vertical"
-            android:padding="12dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
             android:textColor="@android:color/white"
-            android:textSize="17sp"/>
+            android:textSize="16sp"/>
 
         <Button
             android:id="@+id/tweet_supe_button"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Tweet"/>
+            android:text="@string/tweet"/>
 
         <Button
             android:id="@+id/email_supe_button"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Email"/>
+            android:drawableLeft="@drawable/ic_email_white_24dp"
+            android:text="@string/email"/>
 
         <Button
             android:id="@+id/call_supe_button"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Call"/>
+            android:text="@string/call"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/sfpd_badge"/>
 
         <TextView
             android:id="@+id/station_tv"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
             android:gravity="center_vertical"
-            android:padding="12dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
             android:textColor="@android:color/white"
-            android:textSize="17sp"/>
+            android:textSize="16sp"/>
 
         <Button
             android:id="@+id/tweet_station_button"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Tweet"/>
+            android:text="@string/tweet"/>
 
         <Button
             android:id="@+id/email_station_button"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Email"/>
+            android:text="@string/email"/>
 
         <Button
             android:id="@+id/call_station_button"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Call"/>
+            android:drawableLeft="@drawable/ic_phone_white_24dp"
+            android:text="@string/call"/>
 
     </LinearLayout>
 
